samples/_failures_safe/1761127959_0f7ae2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_14e403b4.c: In function ‘main’:
./samples/SAFE/__tmp_14e403b4.c:156:5: error: expected declaration or statement at end of input
  156 |     printf("\nMatrix Multiplication:\n");
      |     ^~~~~~
